# prime-numbers

./: .gitignore  CMakeLists.txt  README.md  main.c
LinkedList/: CMakeLists.txt  LinkedList.h  main.c
